Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-6882

Inline assembly instructions hoisted out of if(CpuInfo::IsSupported()) checks

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • None
    • Impala 2.13.0, Impala 3.1.0
    • Backend

    Description

      See http://community.cloudera.com/t5/Interactive-Short-cycle-SQL/After-upgrading-to-cdh-5-14-2-Impala-daemon-stopped-suddenly/m-p/66501#M4368?eid=1&aid=1

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      #  SIGILL (0x4) at pc=0x0000000000d863e5, pid=13065, tid=0x00007efc499cf700
      #
      # JRE version: Java(TM) SE Runtime Environment (8.0_144-b01) (build 1.8.0_144-b01)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (25.144-b01 mixed mode linux-amd64 compressed oops)
      # Problematic frame:
      # C  [impalad+0x9863e5]  impala::HdfsScanNodeBase::StopAndFinalizeCounters()+0x965
      #
      # Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
      #
      # An error report file with more information is saved as:
      # /var/run/cloudera-scm-agent/process/13339-impala-IMPALAD/hs_err_pid13065.log
      #
      # If you would like to submit a bug report, please visit:
      #   http://bugreport.java.com/bugreport/crash.jsp
      # The crash happened outside the Java Virtual Machine in native code.
      # See problematic frame for where to report the bug.
      #
      

      CPU Info:

      0417 20:54:12.845438 13375 init.cc:230] Cpu Info:
        Model: Intel(R) Xeon(R) CPU           E5405  @ 2.00GHz
        Cores: 8
        Max Possible Cores: 8
        L1 Cache: 32.00 KB (Line: 64.00 B)
        L2 Cache: 6.00 MB (Line: 64.00 B)
        L3 Cache: 0 (Line: 0)
        Hardware Supports:
          ssse3
          sse4_1
        Numa Nodes: 1
        Numa Nodes of Cores: 0->0 | 1->0 | 2->0 | 3->0 | 4->0 | 5->0 | 6->0 | 7->0 |
      

      User reports that it worked on 2.9+patches but crashes on 2.11+patches

      One angle I looked into was whether the wrong Popcount() code path was somehow taken. It doesn't look like any of that code has changed in a while.

      Attachments

        1. hs_err_pid13065.log
          103 kB
          Tim Armstrong
        2. Tim Armstrong.url
          0.2 kB
          Acharki Mohammed

        Activity

          People

            tarmstrong Tim Armstrong
            tarmstrong Tim Armstrong
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: